--- a/README
+++ b/README
@@ -1,9 +1,9 @@
 # Download the Stanford Named Entity Recognizer (NER)
-$ curl -O http://nlp.stanford.edu/software/stanford-ner-2012-04-07.tgz
-$ tar xvfz stanford-ner-2012-04-07.tgz
+$ curl -O http://nlp.stanford.edu/software/stanford-ner-2012-11-11.zip
+$ tar xvfz stanford-ner-2012-11-11.tgz
 
 # Run NER as a service on port 8080:
-$ java -mx1000m -cp stanford-ner-2012-04-07/stanford-ner.jar edu.stanford.nlp.ie.NERServer -loadClassifier stanford-ner-2012-04-07/classifiers/english.muc.7class.distsim.crf.ser.gz -port 8080 -outputFormat inlineXML &
+$ java -mx1000m -cp stanford-ner-2012-11-11/stanford-ner.jar edu.stanford.nlp.ie.NERServer -loadClassifier stanford-ner-2012-11-11/classifiers/english.muc.7class.distsim.crf.ser.gz -port 8080 -outputFormat inlineXML &
 
 # Install required gems
 $ bundle install
